tests/fixtures/positive/complexity/TooManyFunctions.kt
package complexity

class TooManyFunctions {
    fun func1() = 1
    fun func2() = 2
    fun func3() = 3
    fun func4() = 4
    fun func5() = 5
    fun func6() = 6
    fun func7() = 7
    fun func8() = 8
    fun func9() = 9
    fun func10() = 10
    fun func11() = 11
    fun func12() = 12
}
