tests/fixtures/negative/complexity/TooManyFunctions.kt
package complexity

class TooManyFunctions {
    fun func1() = 1
    fun func2() = 2
    fun func3() = 3
    fun func4() = 4
    fun func5() = 5
}
